src/objects/accc_Trigger_Handler_MetaData_Model__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Continue_If_Exception__c</columns>
    <columns>Performance_Metrics__c</columns>
    <columns>Domain__c</columns>
    <columns>Environment__c</columns>
    <columns>Trigger_Classes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>